# KROGER

./: CdTe_Intuon_equilib_quench_script.m  CdTe_Intuon_natives.mat  CdTe_defects_Intuon_10062025.mat  CdTe_defects_database_12192025_renames.mat  CdTe_defects_database_with_renames.mat  CdTe_grouping_defects.mat  CdTe_stoich.m  CdTe_vary_defect_energies.m  Cd_Te_CdTe_chem_potentials_from_conditions.m  G0_CaO_gv.m  G0_Cd_gv.m  G0_Cd_ls.m  G0_Cr2O3_ls.m  G0_Cr3O4_ls.m  G0_CrO2_ls.m  G0_CrO_gv.m  G0_CrO_ls.m  G0_Fe3O4_ls.m  G0_GaO_gv.m  G0_H2O_gv.m  G0_H2O_ls.m  G0_HfO2_ls.m  G0_IrO2_gv.m  G0_IrO3_gv.m  G0_MgO_gv.m  G0_MgO_ls.m  G0_O2_gv.m  G0_PtO2_gv.m  G0_Pt_ls.m  G0_Rh2O3_ls.m  G0_Rh2O_ls.m  G0_RhO2_gv.m  G0_RhO2_ls.m  G0_RhO_gv.m  G0_RhO_ls.m  G0_Rh_ls.m  G0_SiO2_ls.m  G0_SiO_gv.m  G0_SnO2_gv.m  G0_SnO2_ls.m  (+68 more)
CdTe/: CdTe_Intuon_equilib_quench_script.m  CdTe_defects_Intuon_10062025.mat  CdTe_defects_with_Cl_Intuon_Orellana_10062025.mat  CdTe_defects_with_Cl_Intuon_Orellana_12192025.mat  CdTe_stoich.m  Cd_CdTe_Te_Thermochem.m  Cd_Te_CdTe_chem_potentials_from_conditions.m  KROGER_CdTe_Master_Script.m  KROGER_Load_CdTe_Database_and_Calc_Settings.m  KROGER_SQ_Set_CdTe_Thermo_Conditions.m  KROGER_Set_CdTe_Defect_Conditions.m  KROGER_Set_CdTe_Material_Conditions.m  KROGER_Set_CdTe_Thermo_Conditions.m
G_thermo_files/: G0_CaO_ls.m  G0_Cd3As2_ls.m  G0_Cr2O3_ls.m  G0_Fe2O3_ls.m  G0_Ga2O3_ls.m  G0_GaN_ls.m  G0_Ga_ls.m  G0_H2O_gv.m  G0_HfO2_ls.m  G0_IrO2_gv.m  G0_N2_gv.m  G0_O2_gv.m  G0_Te4_gv.m  G0_Te7_gv.m  G0_Te_gv.m  G0_TiO_ls.m  G0_file_template_dont_edit_me.m  G_Ar_gv.m  G_As2Te3_ls.m  G_As2_gv.m  G_As3_gv.m  G_As4_gv.m  G_AsTe_gv.m  G_As_gv.m  G_As_ls.m  G_CaO_ls.m  G_CrO2_ls.m  G_CrO_ls.m  G_Ga2O_gv.m  G_GaN_gv.m  G_GaO_gv.m  G_H2_gv.m  G_NH3_gv.m  G_Rh2O_ls.m  G_RhO2_gv.m  G_RhO_ls.m  G_SiO2_ls.m  G_Te6_gv.m  G_Ti2O3_ls.m  G_file_template_dont_edit_me.m  (+1 more)
Ga2O3/: Ga2O3_GaO_mu_boundaries.m  Ga2O3_Varley_all_defects_new_092724.mat  Ga2O3_chemical_potentials.m  Ga2O3_defect_equilib_script_with_frozen.m  Ga2O3_grouping_defects.mat  Ga2O3_script.m  Ga2O3_stability.m  Ga2O3_stoich.m  Ga_O_Ga2O3_chem_potentials_from_conditions.m  Ga_O_chem_potentials_from_conditions.m  KROGER_Load_Ga2O3_Database_and_Calc_Settings.m  KROGER_Set_Ga2O3_Defect_Conditions.m  KROGER_Set_Ga2O3_Material_Conditions.m  KROGER_Set_Ga2O3_Thermo_Conditions.m  (+3 more)
(+81 files in other folders)
